actualicé la inscripcion de anuncios

--- a/index.html
+++ b/index.html
@@ -48,47 +48,52 @@
             </section>
             
 
-        <main class="contenedor">
+<main class="contenedor">
         <!--Primera casa en venta-->
-        <h2>Casas y depas en venta</h2>
-            <div class="contenedor-anuncios">
-                <div class="anuncio">
-                    <img src="img/anuncio1.jpg" alt="anuncio del lago">
-                <h3>Casas de Lujo en el Lago</h3>
-                    <div class="contenido-anuncio">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore excepturi distinctio unde illum possimus ut.</p>
-                    <p>$3,000,000</p>
-                    <a href="#">Ver propiedad</a>
+    <h2 class="texto-centrado">Casas y depas en venta</h2>
+        <div class="contenedor-anuncios">
+            <div class="anuncio">
+                 <img src="img/anuncio1.jpg" alt="anuncio del lago">  
+                 <div class="contenido-anuncio">
+                    <h3>Casas de Lujo en el Lago</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. s ut.</p>
+                    <p class="precio">$3,000,000</p>
+                    <a href="#" class="boton boton-amarillo">Ver propiedad</a>
                 </div>
             </div>
             <div class="anuncio">
             <!--Segunda casa en venta-->
-            <img src="img/anuncio2.jpg" alt="casas terminados de lujo">
-            <div class="contenido-anuncio">
-                <h3>Casas de Lujo en el Lago</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore excepturi distinctio unde illum possimus ut.</p>
-                <p>$3,000,000</p>
-                <a href="#">Ver propiedad</a>
-        </div>
-        </div>
-            <div class="anuncio">
-        <!--Tercera casa en venta-->
-        <img src="img/anuncio3.jpg" alt="casas con alberca">
-        <div class="contenido-anuncio">
-                <h3>Casas de Lujo en el Lago</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore excepturi distinctio unde illum possimus ut.</p>
-                <p>$3,000,000</p>
-                <a href="#">Ver propiedad</a>
+                <img src="img/anuncio2.jpg" alt="casas terminados de lujo">
+                <div class="contenido-anuncio">
+                    <h3>Casas de Lujo en el Lago</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing e.</p>
+                    <p class="precio">$3,000,000</p>
+                    <a href="#" class="boton boton-amarillo">Ver propiedad</a>
+                </div>             
             </div>
-        </div>
-            <a href="#">Ver Todas</a>
-        </div>
-        </main>
+             
+            <div class="anuncio">
+                <!--Tercera casa en venta-->
+                <img src="img/anuncio3.jpg" alt="casas con alberca">
+                <div class="contenido-anuncio">
+                    <h3>Casas de Lujo en el Lago</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing el.</p>
+                    <p class="precio">$3,000,000</p>
+                    <a href="#" class="boton boton-amarillo">Ver propiedad</a>
+                </div>
+            </div>
+        </div>  
+        <div class="ver-todas">
+            <a href="#" class="boton boton-verde">Ver Todas</a> 
+        </div>     
+    </main>
 
-        <section>
+        <section class="imagen-contacto">
+            <div class="contenedor contenido-contacto">
     <h2>Encuentra la casa de tu sueños</h2>
     <p>Llene el formulario de contacto y un asesro se pondrá en contacto contigo a la brevedad</p>
-    <a href="#">Contáctanos</a>
+    <a href="#"class="boton boton-verde">Contáctanos</a>
+    </div>
 </section>
 
     <section>
